Major rework for messages view
